k8s-235/apps/guacamole/overlays/prod/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - guacamole.tdude.co
    secretName: guacamole-tdude-co-tls
  rules:
  - host: guacamole.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guacamole-app
            port:
              name: guacamole-app
